tests/resource/valid/error/exception.mamba
def a <- Exception()
def b <- Exception("b")
